Changes to World Creation Page
This originally came from Cameron who is having issues Committing right now. He was having issues with the carousel. I took a look at it and got it working (partially). looks like there may need to be some tweaking with CSS.  Or, at this stage, my personal thought is to use the updated menu at the bottom (would then add in the corresponding sections below - so more coding needed, but mainly stealing from the main landing page and re-working as needed).

--- a/Group_C_D&D - WB.html
+++ b/Group_C_D&D - WB.html
@@ -91,6 +91,7 @@
 <!-- ============================================================================================================================== -->
 <!-- ======================================================== WORLD Carousel ======================================================== -->
 <!-- ============================================================================================================================== -->
+<section class="main-section padding" id="carousel">
 <body>
 	<div id="myCarousel" class="carousel slide" data-ride="carousel">
 	  <!-- Indicators -->
@@ -102,29 +103,30 @@
 
 	  <!-- Wrapper for slides -->
 	  <div class="carousel-inner">
-		<div class="item active">
-		  <img src="Creator.jpg" alt="Pantheon">
-		  <div class="carousel-caption">
-			<h3>Creating a Pantheon</h3>
-			<p>Pantheon Making is Easy</p>
-		  </div>
-		</div>
+			<div class="item active">
+				<!-- <img src=".\img\Creator.jpg" alt="Pantheon"> -->
+			  <img src=".\img\Creator.jpg" alt="Pantheon">
+				  <div class="carousel-caption">
+					<h3>Creating a Pantheon</h3>
+					<p>Creating a Pantheon is easy!</p>
+				  </div>
+			</div>
 
-		<div class="item">
-		  <img src="Creator.jpg	" alt="Chicago">
-		  <div class="carousel-caption">
-			<h3>Chicago</h3>
-			<p>Thank you, Chicago!</p>
-		  </div>
-		</div>
+			<div class="item">
+			  <img src=".\img\Creator.jpg" alt="Chicago">
+				  <div class="carousel-caption">
+					<h3>Chicago</h3>
+					<p>Chicago, we love you!</p>
+				  </div>
+			</div>
 
-		<div class="item">
-		  <img src="ny.jpg" alt="New York">
-		  <div class="carousel-caption">
-			<h3>New York</h3>
-			<p>We love the Big Apple!</p>
-		  </div>
-		</div>
+			<div class="item">
+			  <img src=".\img\Creator.jpg" alt="New York">
+				  <div class="carousel-caption">
+					<h3>New York</h3>
+					<p>We love the Big Apple!</p>
+				  </div>
+			</div>
 	  </div>
 
   <!-- Left and right controls -->
@@ -137,6 +139,66 @@
     <span class="sr-only">Next</span>
   </a>
 	</div>
+</section>
+
+<p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
+<p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
+<p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
+<p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
+
+
+<!-- ============================================================================================================================== -->
+<!-- ========================================================= WORLD BUILDING SECTION ======================================================= -->
+<!-- ============================================================================================================================== -->
+
+<section class="main-section padding" id="Menu"><center><!--main-section-start-->
+	<div class="container">
+    	<h2>World Building Menu</h2>
+		<h6><center>Choose the Environment you would like to build...</h6>
+    	<h3><center>Try them ALL!</h3><br>
+		<div class="portfolioFilter">  
+			<ul class="Portfolio-nav wow fadeIn delay-02s">
+				<!-- -->
+				<li><a href="#" data-filter="*" class="current">View All</a></li>
+				<li><a href="#" data-filter=".Pantheon">Pantheon Creation</a></li>
+				<li><a href="#" data-filter=".Chicago">Chicago Creation</a></li>
+				<li><a href="#" data-filter=".NY">New York Creation</a></li>
+				<li><a href="#" data-filter=".world">General World Building</a></li>
+			</ul>
+		</div> 
+	</div>
+    <div class="portfolioContainer wow fadeInUp delay-04s">
+            	<div class="Portfolio-box Pantheon">
+                	<a href=".\img\Creator.jpg"><img src=".\img\Creator.jpg" alt="Pantheon Creation"></a>
+                	<h3>Pantheon Creation</h3>
+                    <p>General Instructions on building a pantheon!</p>
+                </div>
+                <div class="Portfolio-box Chicago">
+                	<a href=".\img\Creator.jpg"><img src=".\img\Creator.jpg" alt="Chicago Creation"></a>
+                	<h3>Chicago Maker</h3>
+                    <p>General Instructions on building Chicago!</p>
+                </div>
+                <div class=" Portfolio-box NY">
+                	<a href=".\img\Creator.jpg"><img src=".\img\Creator.jpg" alt="New York Creation"></a>
+                	<h3>New York Building</h3>
+                    <p>General Instructions on building New York!</p>
+                </div>
+                <div class=" Portfolio-box world" >
+                	<a href="img/icon7.ico"><img src="img/icon7.ico" alt="General World Building"></a>
+                	<h3>General World Building</h3>
+                    <p>Learn General information about World Building!</p>
+                </div>
+    </div>
+	
+	
+</section><!--main-section-end-->
+
+<p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
+<p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
+<p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
+<p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
+
+
 
 
 </body>
