--- a/Group_C_D&D - WB.html
+++ b/Group_C_D&D - WB.html
@@ -107,7 +107,7 @@
 				<!-- <img src=".\img\Creator.jpg" alt="Pantheon"> -->
 			  <img src=".\img\Creator.jpg" alt="Pantheon">
 				  <div class="carousel-caption">
-					<h3>Creating a Pantheon</h3>
+					<h4 text="bold" >Creating a Pantheon</h4>
 					<p>Creating a Pantheon is easy!</p>
 				  </div>
 			</div>
@@ -115,7 +115,7 @@
 			<div class="item">
 			  <img src=".\img\Creator.jpg" alt="Chicago">
 				  <div class="carousel-caption">
-					<h3>Chicago</h3>
+					<h4>Chicago</h4>
 					<p>Chicago, we love you!</p>
 				  </div>
 			</div>
@@ -123,7 +123,7 @@
 			<div class="item">
 			  <img src=".\img\Creator.jpg" alt="New York">
 				  <div class="carousel-caption">
-					<h3>New York</h3>
+					<h4>New York</h4>
 					<p>We love the Big Apple!</p>
 				  </div>
 			</div>
