--- a/Group_C_D&D - Pantheon.html
+++ b/Group_C_D&D - Pantheon.html
@@ -88,58 +88,6 @@
     </div>
 </nav><!--main-nav-end-->
 
-<!-- ============================================================================================================================== -->
-<!-- ======================================================== WORLD Carousel ======================================================== -->
-<!-- ============================================================================================================================== -->
-<section class="main-section padding" id="carousel">
-<body>
-	<div id="myCarousel" class="carousel slide" data-ride="carousel">
-	  <!-- Indicators -->
-	  <ol class="carousel-indicators">
-		<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-		<li data-target="#myCarousel" data-slide-to="1"></li>
-		<li data-target="#myCarousel" data-slide-to="2"></li>
-	  </ol>
-
-	  <!-- Wrapper for slides -->
-	  <div class="carousel-inner">
-			<div class="item active">
-				<!-- <img src=".\img\Creator.jpg" alt="Pantheon"> -->
-			  <img src=".\img\Creator.jpg" alt="Pantheon">
-				  <div class="carousel-caption">
-					<h3>Creting a World</h3>
-					<p>Creating a World is easy!</p>
-				  </div>
-			</div>
-
-			<div class="item">
-			  <img src=".\img\Creator.jpg" alt="Chicago">
-				  <div class="carousel-caption">
-					<h3>Story Telling</h3>
-					<p>Making a Story is Easy!</p>
-				  </div>
-			</div>
-
-			<div class="item">
-			  <img src=".\img\Creator.jpg" alt="New York">
-				  <div class="carousel-caption">
-					<h3>Dungeon Master Tips</h3>
-					<p>DMing Tips!</p>
-				  </div>
-			</div>
-	  </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-	</div>
-</section>
 
 <p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
 <p> -------------------------------------------------------- Break Line --------------------------------------------------------------- </p>
@@ -148,46 +96,17 @@
 
 
 <!-- ============================================================================================================================== -->
-<!-- ========================================================= WORLD BUILDING SECTION ======================================================= -->
+<!-- ========================================================= Pantheon SECTION ======================================================= -->
 <!-- ============================================================================================================================== -->
 
 <section class="main-section padding" id="Menu"><center><!--main-section-start-->
 	<div class="container">
-    	<h2>World Building Menu</h2>
+    	<h2>Making a Pantheon</h2>
 		<h6><center>Choose the Environment you would like to build...</h6>
-    	<h3><center>Try them ALL!</h3><br>
-		<div class="portfolioFilter">  
-			<ul class="Portfolio-nav wow fadeIn delay-02s">
-				<!-- -->
-				<li><a href="#" data-filter="*" class="current">View All</a></li>
-				<li><a href="#" data-filter=".Pantheon">Pantheon Creation</a></li>
-				<li><a href="#" data-filter=".Chicago">Story Telling</a></li>
-				<li><a href="#" data-filter=".NY">Dungeon Master Tips</a></li>
-				<li><a href="#" data-filter=".world">General World Building</a></li>
-			</ul>
-		</div> 
-	</div>
-    <div class="portfolioContainer wow fadeInUp delay-04s">
-            	<div class="Portfolio-box Pantheon">
-                	<a href=".\img\Creator.jpg"><img src=".\img\Creator.jpg" alt="Pantheon Creation"></a>
-                	<h3>Pantheon Creation</h3>
-                    <p>General Instructions on building a pantheon!</p>
-                </div>
-                <div class="Portfolio-box Chicago">
-                	<a href=".\img\Creator.jpg"><img src=".\img\Creator.jpg" alt="Chicago Creation"></a>
-                	<h3>Story Telling</h3>
-                    <p>General Instructions on building Chicago!</p>
-                </div>
-                <div class=" Portfolio-box NY">
-                	<a href=".\img\Creator.jpg"><img src=".\img\Creator.jpg" alt="New York Creation"></a>
-                	<h3>Dungeon Master Tips</h3>
-                    <p>General Instructions on building New York!</p>
-                </div>
-                <div class=" Portfolio-box world" >
-                	<a href="img/icon7.ico"><img src="img/icon7.ico" alt="General World Building"></a>
-                	<h3>General World Building</h3>
-                    <p>Learn General information about World Building!</p>
-                </div>
+		<h6> Article made by Cameron DeGeorge </h6>
+		<p> Your Pantheon is Your Own. Your own Goddesses, Gods, Titans, Demi-Gods and So on. Keep in limited. Do not have 50 gods, well, you could, just not ideal for you or the player. 10-25 should be fine.
+Naming them is simple: Take the core aspect or aspects of your God/Goddess and put them into Google Translate and form a work out of it.  Let’s use The God of Darkness, Nightmare, and Death. If you pop this into Google Translate and set the output language to Latin, you come out with this: deus mortis, tenebris, et sequuntur somnia. Now That is a lot, let’s break it down into the pure core aspects. If you just the three main words, Darkness, Nightmares, and Death you get this: mortem, tenebris, sequuntur somnia. Now when I see this, I like to think, what can I do to forge a name. I split the words. Mor-tene-nia making Mortenenia which sounds like more of a Goddess name, but we are making a God, we need something more menacing.  Now I see this Mor-tenebris, Mortenebris sounds good. The key to this is, you have to pick what sounds good, rolls off the tongue, easy to remember. Then alternate from God, Goddess, God, Goddess, until you like the list you make.
+</p>
     </div>
 	
 	
