Additional Comments to - v2
Added additional comments to Pantheon - v2.html page for Group Review.

--- a/Group_C_D&D - Pantheon - v2.html
+++ b/Group_C_D&D - Pantheon - v2.html
@@ -73,6 +73,8 @@
 <!-- ==================================================== MAIN NAVIGATION SECTION ================================================= -->
 <!-- ============================================================================================================================== -->
 
+
+<!-- -->
 <nav class="main-nav-outer" id="test"><!--main-nav-start-->
 	<div class="container">
         <ul class="main-nav">
@@ -93,6 +95,10 @@
 <!-- ========================================================= MENU SECTION ======================================================= -->
 <!-- ============================================================================================================================== -->
 
+
+<!-- NOTE THE 'LI' ROW 'NEXT' ON 110 - COPY THIS ROW AND PASTE BELOW TO ADD ADDITION SECTIONS BELOW. AFTER THAT, COPY THE 
+'DIV' FOR 'NEXT' BELOW IT AND PASTE IT FURTHER DOWN IN THE SAME PARENT 'DIV' TO CREATE A NEW MENU SELECTION. THEN COPY A 
+SECTION BELOW AND PASTE IT FURTHER DOWN AND ALTER THE 'ID' IN THE TOP LEVEL 'SECTION'. -->
 <section class="main-section paddind" id="Menu"><center><!--main-section-start-->
 	<div class="container">
     	<h2>Main Menu</h2>
@@ -125,7 +131,9 @@
 <!-- ======================================================== WORLD SECTION ======================================================== -->
 <!-- ============================================================================================================================== -->
 
-<!-- PANTHEON SECTION FLOATS IN FROM THE RIGHT, THE NEXT SECTION FLOATS IN FROM THE LEFT. ALTERNATE THIS TO KEEP THE FLOW CONSISTANT -->
+<!-- PANTHEON SECTION FLOATS IN FROM THE RIGHT, THE NEXT SECTION FLOATS IN FROM THE LEFT. ALTERNATE THIS TO KEEP THE FLOW CONSISTANT 
+TO ALTERNATE IT, COPY THIS ENTIER 'SECTION' AND PASTE IT **BELOW THE FOLLOWING SECTION** tHEN DO THE SAME FOR THE FOLLOWING SECTION
+TO MAINTAIN CONSISTANCY -->
 <section class="main-section" id="Pantheon"><!--main-section-start-->
 	<div class="container">
 		<h2>Making a Pantheon</h2>
