--- a/Group_C_D&D - Pantheon - v2.html
+++ b/Group_C_D&D - Pantheon - v2.html
@@ -78,13 +78,12 @@
 <nav class="main-nav-outer" id="test"><!--main-nav-start-->
 	<div class="container">
         <ul class="main-nav">
-			<a class="small-logo"><a href="#header"><img src="img/icon4.jpg" alt=""></a>
+			<a class="small-logo"><a href="Group_C_D&D.html"><img src="img/icon4.jpg" alt=""></a>
 			<li><a href="#Menu">Menu</a></li>
-            <li><a href="#World">World Creation</a></li>
+            <li><a href="Group_C_D&D.html">Home</a></li>
 			<li><a href="#Monster">Monster/NPC Maker</a></li>
-            <li><a href="#World">World Building</a></li>
+            <li><a href="Group_C_D&D - Pantheon - v2.html">World Building</a></li>
 			<li><a href="#About">About Us</a></li>
-            <li><a href="#Contact">Contact Us</a></li>
         </ul>
         <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
     </div>
@@ -120,7 +119,7 @@ SECTION BELOW AND PASTE IT FURTHER DOWN AND ALTER THE 'ID' IN THE TOP LEVEL 'SEC
                     <p>General Instructions on Pantheon World Creation!</p>
                 </div>
                 <div class=" Portfolio-box NEXT">
-                	<a href="img/icon7.ico"><img src="img/icon7.ico" alt="NEXT Creation"></a>
+                	<a href="#NEXT"><img src="img/icon7.ico" alt="NEXT Creation"></a>
                 	<h3>NEXT Creation</h3>
                     <p>General Instructions on Creation World Building!</p>
                 </div>
