--- a/Group_C_D&D.html
+++ b/Group_C_D&D.html
@@ -73,16 +73,16 @@
 <!-- ==================================================== MAIN NAVIGATION SECTION ================================================= -->
 <!-- ============================================================================================================================== -->
 
+<!-- -->
 <nav class="main-nav-outer" id="test"><!--main-nav-start-->
 	<div class="container">
         <ul class="main-nav">
-			<a class="small-logo"><a href="#header"><img src="img/icon4.jpg" alt=""></a>
+			<a class="small-logo"><a href="Group_C_D&D.html"><img src="img/icon4.jpg" alt=""></a>
 			<li><a href="#Menu">Menu</a></li>
-            <li><a href="#Character">Character Creation</a></li>
+            <li><a href="Group_C_D&D.html">Home</a></li>
 			<li><a href="#Monster">Monster/NPC Maker</a></li>
-            <li><a href="#World">World Building</a></li>
+            <li><a href="Group_C_D&D - Pantheon - v2.html">World Building</a></li>
 			<li><a href="#About">About Us</a></li>
-            <li><a href="#Contact">Contact Us</a></li>
         </ul>
         <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
     </div>
