Character Page Collaboration
Worked with Bill on the Character Page. Provided a HTML Taglist to assist with coding. Review changes

Co-Authored-By: billycook71 <billycook71@users.noreply.github.com>

--- a/Group_C_D&D - Pantheon - v2.html
+++ b/Group_C_D&D - Pantheon - v2.html
@@ -81,6 +81,7 @@
 			<a class="small-logo"><a href="Group_C_D&D.html"><img src="img/icon4.jpg" alt=""></a>
 			<li><a href="#Menu">Menu</a></li>
             <li><a href="Group_C_D&D.html">Home</a></li>
+			<li><a href="Group_C_D&D charactercreation.html">Character Building</a></li>
 			<li><a href="#Monster">Monster/NPC Maker</a></li>
             <li><a href="Group_C_D&D - Pantheon - v2.html">World Building</a></li>
 			<li><a href="#About">About Us</a></li>
