--- a/Group_C_D&D.html
+++ b/Group_C_D&D.html
@@ -80,6 +80,7 @@
 			<a class="small-logo"><a href="Group_C_D&D.html"><img src="img/icon4.jpg" alt=""></a>
 			<li><a href="#Menu">Menu</a></li>
             <li><a href="Group_C_D&D.html">Home</a></li>
+			<li><a href="Group_C_D&D charactercreation.html">Character Building</a></li>
 			<li><a href="#Monster">Monster/NPC Maker</a></li>
             <li><a href="Group_C_D&D - Pantheon - v2.html">World Building</a></li>
 			<li><a href="#About">About Us</a></li>
@@ -106,13 +107,12 @@
 				<li><a href="#" data-filter=".monster">Monster/NPC Maker</a></li>
 				<li><a href="#" data-filter=".world">World Building</a></li>
 				<li><a href="#" data-filter=".about">About Us</a></li>
-				<li><a href="#" data-filter=".contact">Contact Us</a></li>
 			</ul>
 		</div> 
 	</div>
     <div class="portfolioContainer wow fadeInUp delay-04s">
             	<div class="Portfolio-box character">
-                	<a href="img/icon2.ico"><img src="img/icon2.ico" alt=""></a>
+                	<a href="#Character"><img src="img/icon2.ico" alt=""></a>
                 	<h3>Character Creation</h3>
                     <p>General Instructions on Character Creation!</p>
                 </div>
@@ -122,19 +122,14 @@
                     <p>General Instructions on Monster/NPC Making!</p>
                 </div>
                 <div class=" Portfolio-box world">
-                	<a href="img/icon7.ico"><img src="img/icon7.ico" alt=""></a>
+                	<a href="#World"><img src="img/icon7.ico" alt=""></a>
                 	<h3>World Building</h3>
                     <p>General Instructions on World Building!</p>
                 </div>
-                <div class=" Portfolio-box about" >
-                	<a href="img/icon5.ico"><img src="img/icon5.ico" alt=""></a>
+                <div class=" Portfolio-box about">
+                	<a href="img/iconic5.ico"><img src="img/iconic1.ico" alt=""></a>
                 	<h3>About Us</h3>
                     <p>Learn about the people that made this site!</p>
-                </div>
-                <div class=" Portfolio-box contact">
-                	<a href="img/iconic1.ico"><img src="img/iconic1.ico" alt=""></a>
-                	<h3>Contact Us</h3>
-                    <p>Information on how to contact us.</p>
                 </div>
     </div>
 </section><!--main-section-end-->
@@ -178,7 +173,7 @@
                 </div>
             </div>
             <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-            	<img src="img/icon2.ico" alt="Character Icon">
+            	<img href="Group_C_D&D charactercreation.html" src="img/icon2.ico" alt="Character Icon">
             </figure>
         
         </div>
