--- a/Group_C_D&D charactercreation.html
+++ b/Group_C_D&D charactercreation.html
@@ -69,22 +69,25 @@
     <!-- ============================================================================================================================== -->
     <!-- ==================================================== MAIN NAVIGATION SECTION ================================================= -->
     <!-- ============================================================================================================================== -->
-    <nav class="main-nav-outer" id="test">
-        <!--main-nav-start-->
-        <div class="container">
-            <ul class="main-nav">
-                <a class="small-logo">
-                    <a href="#header"><img src="img/icon4.jpg" alt=""></a>
-                    <li><a href="#Menu">Menu</a></li>
-                    <li><a href="#Character">Character Creation</a></li>
-                    <li><a href="#Monster">Monster/NPC Maker</a></li>
-                    <li><a href="#World">World Building</a></li>
-                    <li><a href="#About">About Us</a></li>
-                    <li><a href="#Contact">Contact Us</a></li>
-            </ul>
-            <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
-        </div>
-    </nav><!--main-nav-end-->
+	
+	
+<!-- -->
+<nav class="main-nav-outer" id="test"><!--main-nav-start-->
+	<div class="container">
+        <ul class="main-nav">
+			<a class="small-logo"><a href="Group_C_D&D.html"><img src="img/icon4.jpg" alt=""></a>
+			<li><a href="#Menu">Menu</a></li>
+            <li><a href="Group_C_D&D.html">Home</a></li>
+			<li><a href="Group_C_D&D charactercreation.html">Character Building</a></li>
+			<li><a href="#Monster">Monster/NPC Maker</a></li>
+            <li><a href="Group_C_D&D - Pantheon - v2.html">World Building</a></li>
+			<li><a href="#About">About Us</a></li>
+        </ul>
+        <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
+    </div>
+</nav><!--main-nav-end-->
+
+
     <!-- ============================================================================================================================== -->
     <!-- ========================================================= Intro Section ====================================================== -->
     <!-- ============================================================================================================================== -->
@@ -113,7 +116,8 @@
                         </div>
                         <i></i>
                         <div class="service-list-col2">
-                            <h3><b>Races</b></h3>
+                            <h3><b><u>Races</u></b></h3>
+							<br>
                             <h3>Dragonborn</h3>
                             <p>Description</p>
                         </div>
@@ -208,7 +212,8 @@
                         </div>
                         <i></i>
                         <div class="service-list-col2">
-                            <h3><b>Classes</b></h3>
+                            <h3><b><u>Classes</u></b></h3>
+							<br>
                             <h3>Barbarian</h3>
                             <p>Description</p>
                         </div>
@@ -332,11 +337,21 @@
     <!-- ================================== Ability Scores, modifiers, and proficiencies ============================================== -->
     <!-- ============================================================================================================================== -->
     <section class="main-section" id="AbilityScoresandSuch">
+
         <!--main-section-start-->
-        <div class="container">
+        <div class="container" align="left">
             <h2>Ability Scores, modifiers, and proficiencies</h2>
             <h6>Now we're going to determine the ability scores and calculate the modifiers and proficiencies</h6>
-            <div class="row">
+
+			<figure  class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
+				<img src="img/creator.jpg" alt="Creator Image">
+			</figure>
+
+            <div align="center" class="row">
+				<br>
+				<br>
+				<br>
+				<br>
                 <!--Fadein-->
                 <div class="col-lg-4 col-sm-2 wow fadeInLeft delay-05s">
                     <!--Ability-Scores-->
@@ -344,38 +359,70 @@
                         <div class="service-list-col1">
                         </div>
                         <i></i>
-                        <div class="service-list-col2">
+                        <div class="service-list-col3">
                             <h3><b>Ability Scores</b></h3>
-                            <p>
-                                Explanation on ability scores, how to get them
-                                and where they should be assigned.
-                            </p>
+                            <p>Explanation on ability scores, how to get them and where they should be assigned.</p>
                         </div>
                     </div>
                 </div>
+				<br>
+				<br>
+				<br>
+				<br>
+				<div class="col-lg-4 col-sm-2 wow fadeInUp delay-05s">
+					<!--Modifiers-and-Proficiencies-->
+					<div class="service-list">
+						<div class="service-list-col1">
+						</div>
+						<i></i>
+						<div class="service-list-col4">
+							<h3><b>Modifiers and Proficiencies</b></h3>
+							<p>Explanation on ability modifiers and how they're calculated. Add racial modifiers
+								Explanation on proficiencies, how they're determined by class, determine hp and atk bonus</p>
+						</div>
+					</div>
+				</div>
+				<br>
+				<br>
+				<br>
+				<br>
                 <!--Fadein-->
-                <div class="col-lg-4 col-sm-2 text-right wow fadeInUp delay-05s">
-                    <!--Modifiers-and-Proficiencies-->
+                <div class="col-lg-4 col-sm-2 wow fadeInLeft delay-05s">
+                    <!--Ability-Scores-->
                     <div class="service-list">
                         <div class="service-list-col1">
                         </div>
                         <i></i>
-                        <div class="service-list-col2">
-                            <h3><b>Modifiers and Proficiencies</b></h3>
-                            <p>
-                                Explanation on ability modifiers and how they're calculated.
-
-                                Add racial modifiers
-
-                                Explanation on proficiencies, how they're
-                                determined by class, determine hp and atk bonus
-                            </p>
+                        <div class="service-list-col3">
+                            <h3><b>Ability -------------------------</b></h3>
+                            <p>Explanation on ability scores, how to get them and where they should be assigned.</p>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
+				<br>
+				<br>
+				<br>
+				<br>
+				<div class="col-lg-4 col-sm-2 wow fadeInUp delay-05s">
+					<!--Modifiers-and-Proficiencies-->
+					<div class="service-list">
+						<div class="service-list-col1">
+						</div>
+						<i></i>
+						<div class="service-list-col4">
+							<h3><b>Modifiers and ----------------------------</b></h3>
+							<p>Explanation on ability modifiers and how they're calculated. Add racial modifiers
+								Explanation on proficiencies, how they're determined by class, determine hp and atk bonus</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
     </section><!--main-section-end-->
+	
+	
+
     <!-- ============================================================================================================================== -->
     <!-- ============================================ Background and Character details ================================================ -->
     <!-- ============================================================================================================================== -->
@@ -488,6 +535,7 @@
                         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                         <li data-target="#myCarousel" data-slide-to="1"></li>
                         <li data-target="#myCarousel" data-slide-to="2"></li>
+						<!-- <li data-target="#myCarousel" data-slide-to="3"></li> -->
                     </ol>
 
                     <!-- Wrapper for slides -->
@@ -502,7 +550,7 @@
                         </div>
 
                         <div class="item">
-                            <img src=".\img\Creator.jpg" alt="Chicago">
+                            <img src=".\img\icon7.ico" alt="Chicago">
                             <div class="carousel-caption">
                                 <h4>Character 2</h4>
                                 <p>Elf Ranger</p>
@@ -510,7 +558,7 @@
                         </div>
 
                         <div class="item">
-                            <img src=".\img\Creator.jpg" alt="New York">
+                            <img src=".\img\icon5.ico" alt="New York">
                             <div class="carousel-caption">
                                 <h4>Character 3</h4>
                                 <p>Gnome Wizard</p>
