Nav Updates & About Us
Created "About" page to display content about each of the projects group members. Also completed updates to Nav section on all pages to enhance functionality.

--- a/Group_C_D&D - About.html
+++ b/Group_C_D&D - About.html
@@ -61,11 +61,11 @@
     	<figure class="logo animated fadeInDown delay-07s">
         	<a href="#"><img src="" alt=""></a>	
         </figure>	
-        <h1 class="animated fadeInDown delay-07s">Group C</h1>
+        <h1 class="animated fadeInDown delay-07s">About Us</h1>
         <ul class="we-create animated fadeInUp delay-1s">
-			<li>Our Thoughts on D&D</li>
+			<li>Learn more about the members of Group C</li>
         </ul>
-            <a class="link animated fadeInUp delay-1s servicelink" href="#Menu">Go Ahead... Roll the Dice!</a>
+            <a class="link animated fadeInUp delay-1s servicelink" href="#Menu">Lets Go!</a>
     </div>
 </header><!--header-end-->
 
@@ -91,57 +91,60 @@
 
 
 <!-- ============================================================================================================================== -->
-<!-- ========================================================= MENU SECTION ======================================================= -->
+<!-- ========================================================= MAIN MENU ======================================================= -->
 <!-- ============================================================================================================================== -->
 
 <section class="main-section paddind" id="Menu"><center><!--main-section-start-->
+
 	<div class="container">
     	<h2>Main Menu</h2>
-		<h6><center>And so it begins...</h6>
+		<h6><center>Who would you like to learn about...</h6>
     	<h3><center>Pick Your Poison!</h3><br>
 		<div class="portfolioFilter">  
 			<ul class="Portfolio-nav wow fadeIn delay-02s">
 				<!-- -->
 				<li><a href="#" data-filter="*" class="current">All</a></li>
-				<li><a href="#" data-filter=".character">Character Creation</a></li>
-				<li><a href="#" data-filter=".monster">Monster Creation</a></li>
-				<li><a href="#" data-filter=".world">World Building</a></li>
-				<li><a href="#" data-filter=".about">About Us</a></li>
+				<li><a href="#" data-filter=".character">Cayce Whitcomb</a></li>
+				<li><a href="#" data-filter=".monster">Bill Cook</a></li>
+				<li><a href="#" data-filter=".world">Cameron DeGeorge</a></li>
+				<li><a href="#" data-filter=".about">Floyd Jackson</a></li>
 			</ul>
 		</div> 
 	</div>
+<nav>
     <div class="portfolioContainer wow fadeInUp delay-04s">
-            	<div class="Portfolio-box character">
-                	<a href="#Character"><img src="img/icon2.ico" alt=""></a>
-                	<h3>Character Creation</h3>
-                    <p>General Instructions on Character Creation!</p>
-                </div>
-                <div class="Portfolio-box monster">
-                	<a href="#Monster"><img src="img/icon1.ico" alt=""></a>
-                	<h3>Monster Creation</h3>
-                    <p>General Instructions on Monster/NPC Making!</p>
-                </div>
-                <div class=" Portfolio-box world">
-                	<a href="#World"><img src="img/icon7.ico" alt=""></a>
-                	<h3>World Building</h3>
-                    <p>General Instructions on World Building!</p>
-                </div>
-                <div class=" Portfolio-box about">
-                	<a href="#About"><img src="img/iconic1.ico" alt=""></a>
-                	<h3>About Us</h3>
-                    <p>Learn about the people that made this site!</p>
-                </div>
+		<div class="Portfolio-box character">
+			<a href="#Character"><img src="img/iconic1.ico" alt=""></a>
+			<h3>Cayce Whitcomb</h3>
+			<p>Learn more about Cayce!</p>
+		</div>
+		<div class="Portfolio-box monster">
+			<a href="#Monster"><img src="img/icon2.ico" alt=""></a>
+			<h3>Bill Cook</h3>
+			<p>Learn more about Bill!</p>
+		</div>
+		<div class=" Portfolio-box world">
+			<a href="#World"><img src="img/icon7.ico" alt=""></a>
+			<h3>Cameron DeGeorge</h3>
+			<p>Learn more about Cameron!</p>
+		</div>
+		<div class=" Portfolio-box about">
+			<a href="#About"><img src="img/icon6.ico" alt=""></a>
+			<h3>Floyd Jackson</h3>
+			<p>Learn more about Floyd!</p>
+		</div>
     </div>
+</nav>
 </section><!--main-section-end-->
 
 <!-- ============================================================================================================================== -->
-<!-- ==================================================== CHARACTER SECTION ======================================================== -->
+<!-- ==================================================== CAYCE SECTION ======================================================== -->
 <!-- ============================================================================================================================== -->
 
 <section class="main-section" id="Character"><!--main-section-start-->
 	<div class="container">
-    	<h2>Character Creation</h2>
-    	<h6>Character Creation</h6>
+    	<h2>Cayce Whitcomb</h2>
+    	<h6>Project Manager</h6>
         <div class="row">
         	<div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
             	<div class="service-list">
@@ -149,8 +152,8 @@
                     </div>
 					<i></i>
                 	<div class="service-list-col2">
-                        <h3>Character 1</h3>
-                        <p>Character 1 Description</p>
+                        <h3>Contribution 1</h3>
+                        <p>Contribution 1 Description</p>
                     </div>
                 </div>
                 <div class="service-list">
@@ -158,8 +161,8 @@
 					<i></i>
                     </div>
                 	<div class="service-list-col2">
-                        <h3>Character 2</h3>
-                        <p>Character 2 Description</p>
+                        <h3>Contribution 2</h3>
+                        <p>Contribution 2 Description</p>
                     </div>
                 </div>
                 <div class="service-list">
@@ -167,13 +170,13 @@
                     <i></i>
                     </div>
                 	<div class="service-list-col2">
-                        <h3>Character 3</h3>
-                        <p>Character 3 Description</p>
+                        <h3>Contribution 3</h3>
+                        <p>Contribution 3 Description</p>
                     </div>
                 </div>
             </div>
             <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-            	<a href="Group_C_D&D charactercreation.html"><img src="img/icon2.ico" alt="Character Icon"></a>
+            	<a href="Group_C_D&D charactercreation.html"><img src="img/iconic1.ico" alt="Character Icon"></a>
             </figure>
         
         </div>
@@ -181,28 +184,27 @@
 </section><!--main-section-end-->
 
 <!-- ============================================================================================================================== -->
-<!-- ====================================================== MONSTER SECTION ======================================================== -->
+<!-- ====================================================== BILL - MONSTER SECTION ======================================================== -->
 <!-- ============================================================================================================================== -->
 
 <section class="main-section alabaster" id="Monster"><!--main-section alabaster-start-->
 	<div class="container">
     	<div class="row">
-			    <h2>Monster/NPC Maker</h2>
-				<h6>Monster/NPC Maker Description</h6>
+			    <h2>Bill Cook</h2>
+				<h6>Content Developer</h6>
             	
 			<figure class="col-lg-5 col-sm-4 wow fadeInLeft">
-            	<a href=""><img src="img/icon1.ico" alt="Monster Icon"></a>				<!-- FILL IN 'HREF' LINK -->
+            	<a href=""><img src="img/icon2.ico" alt="Monster Icon"></a>				<!-- FILL IN 'HREF' LINK -->
             </figure>
 
         	<div class="col-lg-7 col-sm-8 featured-work">
-				<P class="padding-b">Monster & NPC Makers</P>
             	<div class="featured-box">
                 	<div class="featured-box-col1 wow fadeInRight delay-02s">
                     	<i></i>
                     </div>	
                 	<div class="featured-box-col2 wow fadeInRight delay-02s">
-                        <h3>Monster 1</h3>
-                        <p>Monster Description</p>
+                        <h3>Contribution 1</h3>
+                        <p>Contribution 1 Description</p>
                     </div>    
                 </div>
                 <div class="featured-box">
@@ -210,8 +212,8 @@
                     <i></i>
                     </div>	
                 	<div class="featured-box-col2 wow fadeInRight delay-04s">
-                        <h3>Monster 2</h3>
-                        <p>Monster Description</p>
+                        <h3>Contribution 2</h3>
+                        <p>Contribution 2 Description</p>
                     </div>    
                 </div>
                 <div class="featured-box">
@@ -219,8 +221,8 @@
                     <i></i>
                     </div>	
                 	<div class="featured-box-col2 wow fadeInRight delay-06s">
-                        <h3>Monster 3</h3>
-                        <p>Monster Description</p>
+                        <h3>Contribution 3</h3>
+                        <p>Contribution 3 Description</p>
                     </div>    
                 </div>
                 <a class="Learn-More" href="#">Learn More</a>
@@ -230,14 +232,14 @@
 </section><!--main-section alabaster-end-->
 
 <!-- ============================================================================================================================== -->
-<!-- ======================================================== WORLD SECTION ======================================================== -->
+<!-- ======================================================== CAMERON - WORLD SECTION ======================================================== -->
 <!-- ============================================================================================================================== -->
 
 
 <section class="main-section" id="World"><!--main-section-start-->
 	<div class="container">
-    	<h2>World Building</h2>
-    	<h6>World Building Description</h6>
+    	<h2>Cameron DeGeorge</h2>
+    	<h6>Content Developer</h6>
         <div class="row">
         	<div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
             	<div class="service-list">
@@ -245,8 +247,8 @@
                     </div>
 					<i></i>
                 	<div class="service-list-col2">
-                        <h3>World 1</h3>
-                        <p>World 1 Description</p>
+                        <h3>Contribution 1</h3>
+                        <p>Contribution 1 Description</p>
                     </div>
                 </div>
                 <div class="service-list">
@@ -254,8 +256,8 @@
 					<i></i>
                     </div>
                 	<div class="service-list-col2">
-                        <h3>World 2</h3>
-                        <p>World 2 Description</p>
+                        <h3>Contribution 2</h3>
+                        <p>Contribution 2 Description</p>
                     </div>
                 </div>
                 <div class="service-list">
@@ -263,8 +265,8 @@
                     <i></i>
                     </div>
                 	<div class="service-list-col2">
-                        <h3>World 3</h3>
-                        <p>World 3 Description</p>
+                        <h3>Contribution 3</h3>
+                        <p>Contribution 3 Description</p>
                     </div>
                 </div>
             </div>
@@ -277,25 +279,25 @@
 </section><!--main-section-end-->
 
 <!-- ============================================================================================================================== -->
-<!-- ======================================================= ABOUT SECTION ======================================================== -->
+<!-- ======================================================= FLOYD - ABOUT SECTION ======================================================== -->
 <!-- ============================================================================================================================== -->
 
 <section class="main-section alabaster" id="About"><!--main-section alabaster-start-->
 	<div class="container">
+    	<h2>Floyd Jackson</h2>
+    	<h6>Documentation Resource / Content Developer</h6>
     	<div class="row">
 			<figure class="col-lg-5 col-sm-4 wow fadeInLeft">
-            	<a href="Group_C_D&D - About.html"><img src="img/icon5.ico" alt="Creator Image"></a>		<!-- FILL IN 'HREF' LINK -->
+            	<a href=""><img src="img/icon6.ico" alt="Creator Image"></a>		<!-- FILL IN 'HREF' LINK -->
             </figure>
-        	<div class="col-lg-7 col-sm-8 About-work">
-            	<h2>About Us</h2>
-            	<P class="padding-b">General description of how this all came to be</P><br>
+         	<div class="col-lg-7 col-sm-8 featured-work">
             	<div class="featured-box">
                 	<div class="featured-box-col1 wow fadeInRight delay-02s">
                     	<i></i>
                     </div>	
                 	<div class="featured-box-col2 wow fadeInRight delay-02s">
-                        <h3>HISTORY POINT 1</h3>
-                        <p>HISTORY POINT 1 DESCRIPTION</p>
+                        <h3>Contribution 1</h3>
+                        <p>Contribution 1 Description</p>
                     </div>    
                 </div>
                 <div class="featured-box">
@@ -303,8 +305,8 @@
                     <i></i>
                     </div>	
                 	<div class="featured-box-col2 wow fadeInRight delay-04s">
-                        <h3>HISTORY POINT 2</h3>
-                        <p>HISTORY POINT 2 DESCRIPTION</p>
+                        <h3>Contribution 2</h3>
+                        <p>Contribution 2 Description</p>
                     </div>    
                 </div>
                 <div class="featured-box">
@@ -312,8 +314,8 @@
                     <i></i>
                     </div>	
                 	<div class="featured-box-col2 wow fadeInRight delay-06s">
-                        <h3>HISTORY POINT 3</h3>
-                        <p>HISTORY POINT 3 DESCRIPTION</p>
+                        <h3>Contribution 3</h3>
+                        <p>Contribution 3 Description</p>
                     </div>    
                 </div>
                 <a class="Learn-More" href="#">Learn More</a>
