--- a/Group_C_D&D - Pantheon - v2.html
+++ b/Group_C_D&D - Pantheon - v2.html
@@ -61,11 +61,11 @@
     	<figure class="logo animated fadeInDown delay-07s">
         	<a href="#"><img src="" alt=""></a>	
         </figure>	
-        <h1 class="animated fadeInDown delay-07s">Group C</h1>
+        <h1 class="animated fadeInDown delay-07s">World's</h1>
         <ul class="we-create animated fadeInUp delay-1s">
-			<li>Our Thoughts on D&D</li>
+			<li>Our Thoughts on World Creation</li>
         </ul>
-            <a class="link animated fadeInUp delay-1s servicelink" href="#Menu">Go Ahead... Roll the Dice!</a>
+            <a class="link animated fadeInUp delay-1s servicelink" href="#Menu">Lets Go!</a>
     </div>
 </header><!--header-end-->
 
@@ -82,9 +82,9 @@
 			<li><a href="#Menu">Menu</a></li>
             <li><a href="Group_C_D&D.html">Home</a></li>
 			<li><a href="Group_C_D&D charactercreation.html">Character Building</a></li>
-			<li><a href="#Monster">Monster/NPC Maker</a></li>
+			<li><a href="#Monster">Monster Building</a></li>
             <li><a href="Group_C_D&D - Pantheon - v2.html">World Building</a></li>
-			<li><a href="#About">About Us</a></li>
+			<li><a href="Group_C_D&D - About.html">About Us</a></li>
         </ul>
         <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
     </div>
