--- a/Group_C_D&D charactercreation.html
+++ b/Group_C_D&D charactercreation.html
@@ -59,11 +59,11 @@
             <figure class="logo animated fadeInDown delay-07s">
                 <a href="#"><img src="" alt=""></a>
             </figure>
-            <h1 class="animated fadeInDown delay-07s">Group C</h1>
+            <h1 class="animated fadeInDown delay-07s">Character's</h1>
             <ul class="we-create animated fadeInUp delay-1s">
-                <li>Our Thoughts on D&D</li>
+                <li>Our Thoughts on Character Creation</li>
             </ul>
-            <a class="link animated fadeInUp delay-1s servicelink" href="#Menu">Go Ahead... Roll the Dice!</a>
+            <a class="link animated fadeInUp delay-1s servicelink" href="#Menu">Lets Go!</a>
         </div>
     </header><!--header-end-->
     <!-- ============================================================================================================================== -->
@@ -79,9 +79,9 @@
 			<li><a href="#Menu">Menu</a></li>
             <li><a href="Group_C_D&D.html">Home</a></li>
 			<li><a href="Group_C_D&D charactercreation.html">Character Building</a></li>
-			<li><a href="#Monster">Monster/NPC Maker</a></li>
+			<li><a href="#Monster">Monster Building</a></li>
             <li><a href="Group_C_D&D - Pantheon - v2.html">World Building</a></li>
-			<li><a href="#About">About Us</a></li>
+			<li><a href="Group_C_D&D - About.html">About Us</a></li>
         </ul>
         <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
     </div>
@@ -98,6 +98,73 @@
             <h6>On this page we're going to show you how to make a character and give you some examples!</h6>
         </div>
     </section>
+	
+	
+	
+
+	<!-- ============================================================================================================================== -->
+	<!-- ========================================================= MENU SECTION ======================================================= -->
+	<!-- ============================================================================================================================== -->
+
+	<section class="main-section paddind" id="Menu"><center><!--main-section-start-->
+		<div class="container">
+			<h2>Main Menu</h2>
+			<h6><center>And so it begins...</h6>
+			<h3><center>Pick Your Poison!</h3><br>
+			<div class="portfolioFilter">  
+				<ul class="Portfolio-nav wow fadeIn delay-02s">
+					<!-- -->
+					<li><a href="#" data-filter="*" class="current">All</a></li>
+					<li><a href="#" data-filter=".RaceClass">Race | Class</a></li>
+					<li><a href="#" data-filter=".AbilityScoresandSuch">Ability | Scores & Such</a></li>
+					<li><a href="#" data-filter=".BackgroundandDetails">Background & Details</a></li>
+					<li><a href="#" data-filter=".Equipment">Equipment</a></li>
+					<li><a href="#" data-filter=".Leveling">Leveling</a></li>
+					<li><a href="#" data-filter=".CharacterSheets">Character Sheets</a></li>
+					<li><a href="#" data-filter=".carousel">Character Carousel</a></li>
+				</ul>
+			</div> 
+		</div>
+		<div class="portfolioContainer wow fadeInUp delay-04s">
+					<div class="Portfolio-box RaceClass">
+						<a href="#RaceClass"><img src="img/icon2.ico" alt=""></a>
+						<h3>Race | Class</h3>
+						<p>General Instructions on Race | Class</p>
+					</div>
+					<div class="Portfolio-box AbilityScoresandSuch">
+						<a href="#AbilityScoresandSuch"><img src="img/icon1.ico" alt=""></a>
+						<h3>Ability | Scores & Such</h3>
+						<p>General Instructions on Abilities | Scores & Such</p>
+					</div>
+					<div class="Portfolio-box BackgroundandDetails">
+						<a href="#BackgroundandDetails"><img src="img/icon7.ico" alt=""></a>
+						<h3>Background & Details</h3>
+						<p>General Instructions on Background & Details</p>
+					</div>
+					<div class="Portfolio-box Equipment">
+						<a href="#Equipment"><img src="img/iconic1.ico" alt=""></a>
+						<h3>Equipment</h3>
+						<p>General Instructions on Equipment</p>
+					</div>
+					<div class="Portfolio-box Leveling">
+						<a href="#Leveling"><img src="img/iconic1.ico" alt=""></a>
+						<h3>Leveling</h3>
+						<p>General Instructions on Leveling</p>
+					</div>
+					<div class="Portfolio-box CharacterSheets">
+						<a href="#CharacterSheets"><img src="img/iconic1.ico" alt=""></a>
+						<h3>Character Sheets</h3>
+						<p>General Character Sheets</p>
+					</div>
+					<div class="Portfolio-box carousel">
+						<a href="#carousel"><img src="img/iconic1.ico" alt=""></a>
+						<h3>Possible Characters</h3>
+						<p>Carousel of possible characters</p>
+					</div>
+		</div>
+	</section><!--main-section-end-->
+
+
     <!-- ============================================================================================================================== -->
     <!-- ================================================== Race and Class Section ==================================================== -->
     <!-- ============================================================================================================================== -->
@@ -488,7 +555,7 @@
     <!-- ============================================================================================================================== -->
     <!-- ================================================== Character Sheets ========================================================== -->
     <!-- ============================================================================================================================== -->
-    <section class="main-section" id="Character Sheets">
+    <section class="main-section" id="CharacterSheets">
         <!--main-section-start-->
         <div class="container">
             <h2>Character Sheets</h2>
@@ -542,7 +609,7 @@
                     <div class="carousel-inner">
                         <div class="item active">
                             <!-- <img src=".\img\Creator.jpg" alt="Pantheon"> -->
-                            <img src=".\img\Creator.jpg" alt="Pantheon">
+                            <img src=".\img\Creator.jpg" alt="Character 1">
                             <div class="carousel-caption">
                                 <h4 text="bold">Character 1</h4>
                                 <p>Human Fighter</p>
@@ -550,7 +617,7 @@
                         </div>
 
                         <div class="item">
-                            <img src=".\img\icon7.ico" alt="Chicago">
+                            <img src=".\img\Creator.jpg" alt="Character 2">
                             <div class="carousel-caption">
                                 <h4>Character 2</h4>
                                 <p>Elf Ranger</p>
@@ -558,7 +625,7 @@
                         </div>
 
                         <div class="item">
-                            <img src=".\img\icon5.ico" alt="New York">
+                            <img src=".\img\Creator.jpg" alt="Character 3">
                             <div class="carousel-caption">
                                 <h4>Character 3</h4>
                                 <p>Gnome Wizard</p>
